tests/negative/neg_pr1162_removed_declare_expression.safe
package neg_pr1162_removed_declare_expression

   function build returns integer

      return declare
         temp : integer = 1;
      begin
         temp;
